--- a/css/style.css
+++ b/css/style.css
@@ -2,61 +2,838 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-.body {
     font-family: 'Playfair Display', serif;
+    max-width: 100%;
+    scroll-behavior: smooth;
 }
 
-.menu{
-    font-family: 'Inter', sans-serif;
-   
+a:hover{
+    text-decoration: underline;
 }
 
-.container {
-    width: 100vw;
-    height: 100vh;
-    transform: translate(0, 100%);
-    background-color: aquamarine;
+#perfumes {
+    color: rgb(29, 29, 29);
+    font-size: 4em;
+    margin-top: 4px;
+    padding-right: 2rem;
+    transition: 0.5s;
 }
 
-
-/* .container-1 {
-    position: relative;
+.navbar {
+    max-width: 100vw;
+    padding: 0;
 }
 
-.centrar {
-    margin: 0;
-    position: absolute;
+.blancoFijo {
+    background-color: white;
+    transition: 0.6s ease-in;
+    min-width: 100vw;
+        position: fixed;
+    padding-bottom: 15px;
     display: flex;
-    align-items: baseline;
-    justify-content: center;
+    align-items: center;
+    gap: 25px 10px;
+    height: 25%;
+    padding: 0 40px;
+    z-index: 1;
 }
 
-#logo {
-    width: 25%;
-} */
+#blanco {
+    min-width: 100vw;
+        position: fixed;
+    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    gap: 25px 10px;
+    height: 20%;
+    padding: 0 40px;
+    z-index: 1;
+}
 
-/* .navbar {  
-    background-color: aquamarine;
-} */
+.menuestilo {
+    font-size: 1.3em;
+}
 
-#menu {
-    /* background-color: aquamarine; */
+.blancoFijoMenu {
+    display: contents;
+    position: absolute;
+}
+
+.mdesplegado {
+    list-style: none;
+    display: flex;
+    /* justify-content: center; */
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    font-size: 3em;
+}
+
+/* .menuestilo {
     display: flex;
     flex-direction: column;
-    background-color: transparent;
-    border-bottom: black 2px solid;
+    font-size: 0.7em;
+    border-bottom: 1.5px rgb(4, 4, 4) solid;
+    width: 90%;
+    margin: auto;
+} */
+
+.nav-item {
+    text-align: center;
 }
 
+.nav-item > a {
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    color: rgb(4, 4, 4);
+}
+
+.navbar-toggler {
+    border: none;
+    transition: 0.6s ease;
+}
+
+.navbar-brand {
+    margin-left: -1rem;
+    min-width: 100px;
+}
+
+.navbar-collapse {
+    transition: 1s ease-out;
+}
+
+
+/* .navbar-toggler-icon {
+    background-image: url(../recursos/menu.png);
+} */
+
 .embed-responsive-item {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
-    /* min-width: 100%;
-    min-height: 100vh; */
     object-fit: cover;
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px;
     z-index: -1;  
+}
+
+.altura-header {
+    height: 100vh;
+}
+
+main {
+    background-color: white;
+}
+
+#sec-carousel {
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    height: 110vh;
+    z-index: 2;
+}
+
+.carousel-indicators {
+    bottom: 5em;
+    max-width: 250px;
+    margin: auto;
+    opacity: 0.3;
+}
+
+.carousel-inner {
+    width: 90%; 
+    height: 550px;
+    overflow: hidden;
+    padding: 20px 0;
+    margin: auto;
+    transform: scale(1.2);
+}
+
+.carousel-item {
+    width: 300px;
+    height: 400px;
+    border-radius: 10px;
+    padding: 10px;
+    transition: all 0.9s ease;
+    left: calc(50% - 152px);
+    margin-top: 50px;
+    background: linear-gradient(180deg, #e7eace, #d2d8be, #c0e3ac);
+    animation: gradient 15s ease;
+}
+
+.card-2.selected {
+    transform: scale(1.08) rotateZ(0.1rad);
+    opacity: 0.6 ease-in-out;
+    filter: grayscale(60%) drop-shadow(0 0 0.75rem rgb(208, 237, 157));
+}
+
+.card-1.sale {
+    opacity: 1;
+    transition: 0.6s ease-out;
+    filter: drop-shadow(0 0 0.75rem rgb(157, 214, 237));
+}
+
+.card-2.backSale {
+    transform: scale(1.08) rotateZ(-0.1rad);
+    opacity: 0.9 ease-in-out;
+    filter: grayscale(50%) drop-shadow(0 0 0.75rem rgb(208, 237, 157));
+}
+
+.card-1.backSelected {
+    opacity: 1;
+    transition: 0.7s ease-out;
+}
+
+.carousel-item > img {
+    width: 100%;
+    height: fit-content;
+}
+
+.carousel-caption {
+    top: 320px;
+}
+
+section {
+    position: sticky;
+    transition: 0.5s ease;
+    border: 0.5px solid rgb(202, 217, 220);
+    border-radius: 15px;
+    box-shadow: 1px 0px 20px rgb(207, 245, 137);
+    background-color: white;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    top: 0;
+    z-index: 2;
+}
+
+
+/* BEST SELLERS */
+
+#best_sellers{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8em 1em 8em 1em;
+}
+
+#best_sellers > img{
+     width: 60%;
+     height: 50%;
+}
+
+.text{
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    padding-right: 25px;
+
+    
+}
+.text > h2{
+    font-size: 110px;
+    font-style: bold;
+}
+
+#galery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 58vh;
+    padding-left: 10px;
+}
+
+#galery > div{
+    flex: 22%;
+    height: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 6px;  
+/*Para el posicionamiento de las imágenes*/
+    background-position: center;
+    background-size: cover;
+}
+
+/*Imagen de fondo para cada div*/
+#galery > div:nth-child(1){
+    background-image: url(../recursos/tomato.jpeg);
+    border-radius: 20px;
+}
+
+#galery > div:nth-child(2){
+    background-image: url(../recursos/cypres.png);
+    border-radius: 20px; 
+}
+
+#galery > div:nth-child(3){
+    background-image: url(../recursos/Oregano.jpg);
+    border-radius: 20px;
+}
+
+#galery > div:nth-child(4){
+    background-image: url(../recursos/tomatojabon.jpg);
+    border-radius: 20px;
+}
+
+#galery > div:nth-child(5){
+    background-image: url(../recursos/sutileza.png);
+    border-radius: 20px;
+}
+
+#galery > div:nth-child(6){
+    background-image: url(../recursos/elixir.png);
+    border-radius: 20px;
+}
+#galery > div:nth-child(7){
+    background-image: url(../recursos/LOEWE\ Perfumes-2.jpg);
+    border-radius: 20px;
+}
+#galery > div:nth-child(8){
+    background-image: url(../recursos/001mujer.png);
+    border-radius: 20px;
+}
+
+#galery > div > div{
+    opacity: 0;
+    background-color:#777E5C; 
+    border-radius: 20px;
+    color: white;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    justify-items: center;
+    transition-property: opacity;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+}
+
+#galery > div > div > h3, p, a{
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 10px;
+}
+
+#galery > div > div >a{
+    color: white;
+    text-align: center; 
+    text-decoration: none;
+    list-style: none;
+    font-size: 10px;
+}
+
+#galery > div > div:hover{
+    opacity: 1;
+}
+
+
+/* NATURALEZA */
+
+.naturaleza {
+    background-image: url(../recursos/LOEWE-naturaleza.webp);
+    width: 100vw;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+  .naturaleza > div {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: whitesmoke; 
+    opacity: 80%; 
+  }
+
+  .naturaleza > div > h3{
+    font-size: 80px;
+    font-weight: bold;
+  }
+
+  .naturaleza > div > h2{
+    font-size: 40px;
+  }
+
+  .naturaleza > div > p{
+    font-size: 20px;
+  }
+  .naturaleza > div > ul > li > a{
+    font-size: 20px;
+  }
+
+
+
+
+/* NOVEDADES */
+
+#novedades {
+    height: 99%;
+    padding: 8em 1em 8em 1em;
+}
+
+#novedades > h1 {
+    font-size: 6em;
+    writing-mode: vertical-lr;
+    padding-bottom: 1em;
+    padding-left: 5px;
+}
+
+.col-md-4 {
+    width: 20rem;
+    padding-left: 1rem;
+}
+
+.card {
+    overflow: hidden;
+}
+
+.card-title {
+    border: 1px solid grey;
+    border-radius: 25px;
+    font-size: 1.2em;
+    text-align: center;
+    width: 80%;
+    float: left;
+    padding: 0.9em 0 1em 0;
+}
+
+.btn {
+    background-color: transparent;
+    color: black;
+    border: none;
+    font-size: 2em;
+    float: right;
+    width: 4rem;
+}
+
+
+
+
+/*footer*/
+
+footer {
+    padding-top: 5px;
+    background-color: white;
+}
+
+.ap{
+    background-color: #D2D8BE;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    padding: 50px;
+    border-bottom: 1.5px rgb(4, 4, 4) solid;
+}
+
+.ap > img{
+    width: 130px;
+}
+
+.politicas{
+    background-color: #D2D8BE;
+    padding: 20px;
+    text-align: center;
+}
+.politicas > ul > li{
+    display: inline-block;
+}
+
+.redes{
+    background-color: #283106;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.contacto > ul > li > a {
+    color: #283106;
+    font-family: 'Playfair Display', serif;
+    font-size: 16px;
+}
+
+.politicas > ul > li > a {
+    font-family: 'Playfair Display', serif;
+    color: #283106;
+    font-size: 16px;
+}
+
+.redes > ul > li > a {
+    color: #D2D8BE;
+    font-family: 'Playfair Display', serif;
+}
+
+ul{
+    text-decoration: none;
+    list-style: none;
+    padding-left: 0;
+}
+
+
+/* PÁGINA PRODUCTO */
+
+
+.row.gx-4.producto-pag {
+    padding: 9rem 1rem;
+    margin: 0;
+}
+
+.miami {
+    height: 680px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid;
+    border-radius: 15px;
+    margin-top: 2rem;
+    /* background-color: #d3ef62; */
+}
+
+.miami h1 {
+    font-size: 1.1em;
+    align-self: start;
+    padding-bottom: 5px;
+    padding-top: 8px;
+    padding-left: 5px;
+    text-transform: uppercase;
+}
+
+#agua {
+    height: 587px;
+    width: 600px;
+    object-fit: cover;
+    object-position: 100% 65%;
+}
+
+#compartir {
+    align-self: flex-end;
+    width: 26px;
+    padding-bottom: 6px;
+    padding-right: 0.1rem;
+ }
+
+.row .col-lg {
+    z-index: 0;
+}
+
+.conocer-ingredientes {
+    margin-top: 2rem;
+}
+
+.dropdown-menu {
+    width: 510px;  
+}
+
+.dropdown {
+    border: 1px rgb(30, 30, 30) solid;
+    border-radius: 5px;
+}
+
+.dropdown:hover {
+    border: none;
+    transition: 0.6s ease-in;
+}
+
+.btn:hover {
+    background-color: rgb(30, 30, 30);
+}
+
+.text-body-secondary {
+    max-width: 510px;
+}
+
+.text-body-secondary h6 {
+    word-spacing: -0.1em;
+    letter-spacing: 0.08em;
+    line-height: 1.5;
+    text-transform: uppercase;
+    text-align: justify;
+    font-size: 0.8em;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+}
+
+.text-body-secondary h6 em {
+    color: rgb(30, 30, 30);
+    font-style: normal;
+    word-spacing: inherit;
+    letter-spacing: inherit;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+}
+
+.btn-conocer {  
+    font-size: 1.1em;
+    width: 140px;
+}
+
+.btn-ingredientes {  
+    font-size: 1.1em;
+    width: 190px;
+}
+
+.btn-cuidados {  
+    font-size: 1.1em;
+    width: 240px;
+}
+
+.enlaces {
+    margin-top: 1rem;
+    margin-bottom: 8rem;
+    margin-left: 2rem;
+}
+
+.enlaces a {
+    text-decoration: none;
+    color:rgb(4, 4, 4);
+    padding: 1rem;
+    font-size: 20px;
+}
+
+.enlaces a:hover {
+    background-color: rgb(30, 30, 30);
+    color: white;
+    transition: 0.5 ease-in;
+}
+
+.enlaces > a > img {
+    width: 20px;
+    padding-left: 0.2rem;
+}
+
+.espacio {
+    height: 29rem;    
+    position: relative;
+}
+
+.thumb {
+    width: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+
+@media (max-width: 992px) {
+
+    .mdesplegado {
+        padding: 2em 0 0 0;
+        flex-direction: column; 
+    }
+
+    #perfumes {
+        font-size: 2em;
+        margin-top: 0.7em;
+        padding-right: 2rem;
+    }
+
+    #agua {
+        object-position: 40% 65%;
+        transform: scale(1.2);
+    }
+
+    .buitre {
+        overflow: hidden;
+    }
+
+    .btn-conocer {  
+        width: 100vw;
+    }
+    
+    .btn-ingredientes {  
+        width: 100vw;
+    }
+    
+    .btn-cuidados {  
+        width: 100vw;
+    }
+  
+    .row .precio {
+        padding-left: 43%;
+    }
+
+    .dropdown-menu {
+        width: 100%;
+    }
+
+    .dropdown {
+        border-bottom: 1px rgb(30, 30, 30) solid;
+        border-top: none;
+        border-right: none;
+        border-left: none;
+        border-radius: 0;
+    }
+
+    .row .precio {
+        border-bottom: 1px rgb(30, 30, 30) solid;
+    }
+    
+    .text-body-secondary {
+        max-width: 100%;
+    }
+
+    .espacio {
+        height: 19rem;
+    }
+
+    .enlaces {
+        margin-top: 3rem;
+        text-align: center;
+        margin-left: 0;
+    }
+}
+
+
+@media (max-width: 576px) {
+
+    #novedades {
+        padding-top: 4em;
+    }
+
+    #novedades > h1 {
+        font-size: 2em;
+        writing-mode: horizontal-tb;
+        position: absolute;
+        top: 5px;
+    }
+
+    .navbar-nav {
+        padding-bottom: 25px;
+    }
+
+    .carousel-inner {
+        width: 95%;
+        height: auto;
+    }
+
+    .carousel-item {
+        width: 100%;
+        height: auto;
+        left: 0;
+        margin-top: 0;
+        padding: 0;   
+    }
+
+    .carousel-indicators {
+        bottom: 2rem;
+    }
+
+    .card-2.selected {
+        transform: scale(1) rotateZ(0); 
+        filter: grayscale(40%) drop-shadow(0 0 0rem); 
+        opacity: 1;
+    }
+
+    .card-1.sale {
+        transform: rotateY(0); 
+        filter: blur(1px);
+        &:hover {
+            filter: blur(0px);
+        }
+    }
+
+    .card-2.backSale {
+        transform: scale(1) rotateZ(0);
+        filter: drop-shadow(0 0 0rem);
+    }
+
+    #perfumes {
+        font-size: 2em;
+        padding-right: 0;
+        margin-top: 0;
+    }
+
+    .navbar {
+        flex-direction: column;
+    } 
+
+    .navbar-brand {
+        margin: auto;
+    }
+
+    #divloewe {
+        height: 60%;
+        padding: 0;
+    }
+
+    .mdesplegado {
+        padding-left: 0;
+        padding-top: 10px;
+    }  
+    
+    .blancoFijo {
+        gap: 0;
+        height: 25%;
+        flex-direction: column;
+    }
+    
+    .blancoFijoMenu {
+        display: contents;
+        position: absolute;
+    }
+
+    .ap > img{
+        padding: 0 20px 10px 20px;
+    }
+
+    .text-body-secondary h6 {
+        word-spacing: 0.1em;
+        line-height: 1.6;
+        text-transform: none;
+        text-align: left;
+        font-size: 0.4em;
+    }
+
+    .naturaleza > div > h3 {
+        font-size: 50px;
+    }
+        
+}
+
+
+@media (max-width: 350px) {
+
+    .naturaleza > div > h3 {
+        font-size: 30px;
+    }
+
+    #perfumes {
+        font-size: 1.5rem;
+    }
+
+    #menu {
+        margin: 0;
+        padding: 0;
+    }
+
+    .carousel-item {
+        left: 0;
+    }
+
+    .card-1.sale {
+        filter: blur(0);
+    }
+
+    .card-2.backSale {
+        filter: gray;
+        -webkit-filter: grayscale(50%);
+        transition: filter 0.8s ease-in;
+        &:hover {
+            filter: grayscale(0%);
+        }
+    }
 }
